Reload UI on HA reload